<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">application15</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <!--TODO ENTER YOUR APP ID BELOW-->
    <string name="facebook_app_id"/>
    <!--TODO ENTER YOUR APP ID BELOW (eg: fb0123456789)-->
    <string name="fb_login_protocol_scheme">fb</string>
    <!--TODO ENTER YOUR Client Token BELOW-->
    <string name="facebook_client_token"/>
    <string name="lbl_udio">?udio</string>
    <string name="msg_pode_ser_mais_t">pode ser mais tarde? </string>
    <string name="lbl_touch_home_3d">Touch Home 3D</string>
    <string name="lbl_15_30_pm">15:30 PM</string>
    <string name="lbl_estou_chegando">Estou chegando</string>
    <string name="lbl_tik_tok">Tik Tok</string>
    <string name="lbl_r">R$</string>
    <string name="lbl_s">S</string>
    <string name="lbl_0_30">0:30</string>
    <string name="msg_reuni_o_marcada">Reuni?o marcada para ?s...</string>
    <string name="lbl_localiza_o">Localiza??o</string>
    <string name="lbl_cancelar">Cancelar</string>
    <string name="lbl_16_42">16:42</string>
    <string name="lbl_16_41">16:41</string>
    <string name="lbl_matheus">Matheus</string>
    <string name="lbl_16_40">16:40</string>
    <string name="msg_push_notificati">Push-Notification</string>
    <string name="msg_contato_3d_touc">Contato 3D Touch</string>
    <string name="msg_liga_o_de_leti">Liga??o de Leticia Rejeitada</string>
    <string name="msg_esperamos_sua_r">Esperamos sua resposta</string>
    <string name="lbl_app_navigation">App Navigation</string>
    <string name="lbl_9_04_am">9:04 AM</string>
    <string name="msg_ernnandes_gimen">Ernnandes Gimenez</string>
    <string name="msg_envio_de_locali">Envio de Localiza??o</string>
    <string name="lbl_let_cia">Let?cia</string>
    <string name="lbl_contato">Contato</string>
    <string name="lbl_restaurante">Restaurante</string>
    <string name="msg_clipvoice_conve">Clipvoice Conversa com Let?cia</string>
    <string name="lbl_documento">Documento</string>
    <string name="lbl_adriana">Adriana</string>
    <string name="lbl_conversas">CONVERSAS</string>
    <string name="lbl_c_mera">C?mera</string>
    <string name="msg_terceira_conver">Terceira Conversa com Let?cia</string>
    <string name="lbl_empresa">Empresa</string>
    <string name="msg_enviar_localiza">Enviar localiza??o</string>
    <string name="lbl_pagamento">Pagamento</string>
    <string name="lbl_30_s">30 S</string>
    <string name="msg_abertura_de_c_m">Abertura de C?mera</string>
    <string name="lbl_08_11_am">08:11 AM</string>
    <string name="msg_fizemos_sua_res">fizemos sua reserva para...</string>
    <string name="lbl_estacionamento">Estacionamento</string>
    <string name="lbl_google">Google</string>
    <string name="lbl_07_54_am">07:54 AM</string>
    <string name="msg_fam_lia_gon_alv">Fam?lia Gon?alves</string>
    <string name="lbl_60_pessoas">60 pessoas</string>
    <string name="lbl_calend_rio">Calend?rio</string>
    <string name="msg_por_favor_envie">por favor envie em PDF</string>
    <string name="msg_posso_te_ligar">Posso te ligar ?</string>
    <string name="lbl_better_prices">Better Prices</string>
    <string name="lbl_30">30 </string>
    <string name="msg_parab_ns_sua_pr">Parab?ns sua proposta foi...</string>
    <string name="msg_mensagem_n_o_li">Mensagem n?o lida</string>
    <string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
    <string name="lbl_0_40">0:40</string>
    <string name="msg_gustavos_almeid">Gustavos Almeida</string>
    <string name="lbl_jessyca">Jessyca</string>
    <string name="lbl_n_o_atendida">N?o atendida</string>
    <string name="lbl_13_45_pm">13:45 PM</string>
    <string name="msg_digite_uma_mens">Digite uma mens...</string>
    <string name="msg_melinda_costa_s">Melinda Costa Silva</string>
    <string name="lbl_udio_capture">?udio capture</string>
    <string name="lbl_youtube">Youtube</string>
    <string name="lbl_locais_pr_ximos">Locais pr?ximos</string>
    <string name="lbl_v_deocapture">V?deocapture</string>
    <string name="lbl_junior">Junior</string>
    <string name="msg_real_estate_con">Real Estate Construtora</string>
    <string name="msg_lista_de_contat">lista de Contatos</string>
    <string name="lbl_belize_group">Belize group</string>
    <string name="lbl_oi_amor_me_liga">oi amor me liga</string>
    <string name="lbl_17_10_pm">17:10 PM</string>
    <string name="lbl_jessica">Jessica</string>
    <string name="lbl_ligar_novamente">Ligar novamente</string>
    <string name="msg_cancelamento_da">Cancelamento da Liga??o</string>
    <string name="msg_bubble_touch_ho">Bubble Touch Home</string>
    <string name="lbl_ontem">ontem</string>
    <string name="lbl_0_5_s">0.5 S</string>
    <string name="lbl_interlagos_sp">INTERLAGOS - SP</string>
    <string name="lbl_lucas">Lucas</string>
    <string name="msg_chamada_de_voz">Chamada de voz via Whatsapp</string>
    <string name="lbl_let_cia_vilella">Let?cia Vilella</string>
    <string name="msg_navigation_draw">Navigation drawers botton call_ leticia</string>
    <string name="lbl_chamando">CHAMANDO</string>
    <string name="msg_estou_escolhend">Estou escolhendo o presente</string>
    <string name="msg_karon_sanches_d">Karon Sanches Dias</string>
    <string name="lbl_galeria">Galeria</string>
    <string name="lbl_e_commerce">E-commerce</string>
    <string name="lbl_chamar">CHAMAR</string>
    <string name="lbl_messenger">Messenger</string>
    <string name="msg_v_deo_chamada">V?deo Chamada  para Leticia</string>
    <string name="lbl_0_5">0.5 </string>
    <string name="lbl_pinterest">Pinterest</string>
    <string name="lbl_13">13</string>
    <string name="lbl_9_11_am">9:11 AM</string>
    <string name="lbl_facebook">Facebook</string>
    <string name="msg_conversando_com">Conversando com Let?cia</string>
    <string name="lbl_now">now</string>
    <string name="msg_nicio_da_v_deo">?nicio da V?deo Captura de 30s</string>
    <string name="lbl_online">Online</string>
    <string name="lbl_obrigado">Obrigado! &#x1f44d;</string>
    <string name="msg_chamada_de_v_de">CHAMADA DE V?DEO VIA WHATSAPP</string>
    <string name="lbl_drive">Drive</string>
    <string name="lbl_v_deo_capture2">V?deo capture</string>
    <string name="lbl_1">1</string>
    <string name="msg_aproveite_nossa">Aproveite nossas ofertas</string>
    <string name="msg_v_deo_grava_o2">V?deo Grava??o 0.5s</string>
    <string name="lbl_2">2</string>
    <string name="lbl_whatsapp">WhatsApp</string>
    <string name="lbl_anthonny">Anthonny</string>
    <string name="lbl_3">3</string>
    <string name="msg_sua_documenta">sua documenta??o foi envi...  </string>
    <string name="msg_precis_o_de_100">Precis?o de 100 metros</string>
    <string name="lbl_16_45_pm">16:45 PM</string>
    <string name="lbl_j_nior">J?nior</string>
    <string name="lbl_otto">Otto</string>
    <string name="lbl_instagram">Instagram</string>
    <string name="msg_localiza_o_atu">Localiza??o atual</string>
    <string name="lbl_s_o_paulo">S?o Paulo</string>
    <string name="msg_video_chamada_e">Video Chamada em Grupo Better Price</string>
    <string name="lbl_22_30">22:30</string>
    <string name="msg_localiza_o_em">Localiza??o em tempo real</string>
    <string name="lbl_chamadas">CHAMADAS</string>
    <string name="lbl_myrella">Myrella</string>
    <string name="lbl_netflix">Netflix</string>
    <string name="lbl_16_33">16:33</string>
    <string name="lbl_meet">Meet</string>
    <string name="msg_adicionar_parti">Adicionar participante</string>
    <string name="msg_push_notificati2">Push-Notification extendido</string>
    <string name="lbl_status">STATUS</string>
    <string name="lbl_sala">Sala</string>
    <string name="lbl_nayara">Nayara</string>
    <string name="lbl_15_01_pm">15:01 PM</string>
    <string name="lbl_gmail">Gmail</string>
    <string name="msg_v_deo_grava_o">V?deo Grava??o apos Rejei??o</string>
    <string name="lbl_better_prices2">Better Prices </string>
    <string name="msg_camera_storage_permission">This Application need permission\n1.Camera permission to capture the image.\n2.Storage Access permission to save the captured image.</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
</resources>
