<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listtextviewleticiRowModel" type="com.application.app.modules.listadecontatos.data.model.ListtextviewleticiRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowtextviewconverTwo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <ImageView android:id="@+id/imageImageviewletic"
            android:layout_height="@dimen/_52pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="@dimen/_52pxh"
            android:scaleType="centerCrop" circular="@{true}"
            imageRes="@{@drawable/img_avatarleticia}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_avatarleticia"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumntextviewletici"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_weight="0.85" android:layout_width="0dp" android:orientation="vertical">
            <LinearLayout android:id="@+id/linearRowtextviewletici"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTextviewletici"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_weight="0.63"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{listtextviewleticiRowModel.txtTextviewletici}"
                    style="@style/txtRobotoromanmedium18_1" tools:text="@string/lbl_let_cia"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTimeTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:layout_marginStart="@dimen/_214pxh"
                    android:layout_weight="0.37"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{listtextviewleticiRowModel.txtTimeTwo}"
                    style="@style/txtRobotomedium12_3" tools:text="@string/lbl_16_40"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtTextviewconverTwo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{listtextviewleticiRowModel.txtTextviewconverTwo}"
                style="@style/txtRobotoregular16" tools:text="@string/msg_posso_te_ligar"/>
        </LinearLayout>
    </LinearLayout>
</layout>
